// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <label
        class="StyledText-sc-1sadyjn-0 cxWGoc"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 iAMDuy FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Just select something...; Selected: A dog"
          class="StyledButtonKind-sc-1vhfpnt-0 eOpKOj StyledSelect__StyledSelectDropButton-sc-znp66n-5 clOcgm"
          disabled=""
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kCyhbr"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 djHtJk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 gDanaQ StyledSelect__SelectTextInput-sc-znp66n-4 XZRKY"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value="A dog"
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 faPjna"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 YwYdN"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gtKINm FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Just select something..."
          class="StyledButtonKind-sc-1vhfpnt-0 hjekSO StyledSelect__StyledSelectDropButton-sc-znp66n-5 clOcgm"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kCyhbr"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 djHtJk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 gDanaQ StyledSelect__SelectTextInput-sc-znp66n-4 gbaNVM"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 faPjna"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 YwYdN"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input inside the dropdown, that can search through the options 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iAMDuy FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 eOpKOj StyledSelect__StyledSelectDropButton-sc-znp66n-5 clOcgm"
          disabled=""
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kCyhbr"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 djHtJk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 gDanaQ StyledSelect__SelectTextInput-sc-znp66n-4 XZRKY"
                  id="pet__input"
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 faPjna"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 YwYdN"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <label
        class="StyledText-sc-1sadyjn-0 cxWGoc"
        for="pet"
      >
        Which pet to get?
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 ccrOLA"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 gtKINm FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Just select something..."
          class="StyledButtonKind-sc-1vhfpnt-0 hjekSO StyledSelect__StyledSelectDropButton-sc-znp66n-5 clOcgm"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kCyhbr"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 djHtJk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 gDanaQ StyledSelect__SelectTextInput-sc-znp66n-4 gbaNVM"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 faPjna"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 YwYdN"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <label
        class="StyledText-sc-1sadyjn-0 cxWGoc"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gtKINm FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Just select something..."
          class="StyledButtonKind-sc-1vhfpnt-0 hjekSO StyledSelect__StyledSelectDropButton-sc-znp66n-5 clOcgm"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kCyhbr"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 djHtJk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 gDanaQ StyledSelect__SelectTextInput-sc-znp66n-4 gbaNVM"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 faPjna"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 YwYdN"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <label
        class="StyledText-sc-1sadyjn-0 cxWGoc"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 losOsW FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Just select something..."
          class="StyledButtonKind-sc-1vhfpnt-0 hjekSO StyledSelect__StyledSelectDropButton-sc-znp66n-5 clOcgm"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kCyhbr"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 djHtJk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 gDanaQ StyledSelect__SelectTextInput-sc-znp66n-4 gbaNVM"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 faPjna"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 YwYdN"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 glekGW"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`Select renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dLjbpo FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <label
        class="StyledText-sc-1sadyjn-0 cxWGoc"
        for="pet"
      >
        Which pet to get?
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gtKINm FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Just select something..."
          class="StyledButtonKind-sc-1vhfpnt-0 hjekSO StyledSelect__StyledSelectDropButton-sc-znp66n-5 clOcgm"
          id="pet"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kCyhbr"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 djHtJk"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dAhNeU"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 gDanaQ StyledSelect__SelectTextInput-sc-znp66n-4 gbaNVM"
                  id="pet__input"
                  placeholder="Just select something..."
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 faPjna"
              style="min-width: auto;"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 YwYdN"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 jNjjQj"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
